@@ -33,8 +33,8 @@
     <td>
       <b>Run</b> <tt>apt-get install lilypond lilypond-doc</tt>
     </td>
-    <td>1.8.0</td>
-    <td>Anthony Fok</td>
+    <td>1.8.1</td>
+    <td>Anthony Fok (Debian)</td>
   </tr>
 
   <tr>
@@ -124,7 +124,7 @@
     <td>
       <b>Go <a href="windows.html">here</a></b>
     </td>
-    <td>1.7.29</td>
+    <td>1.8.1</td>
     <td>
       <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
     </td>
@@ -398,7 +398,7 @@ href="ftp://ftp.lilypond.org/pub/LilyPond/v1.6/lilypond-1.6.12.tar.gz">tarball</
 
 <h3>RedHat-9</h3>
 
-LilyPond 1.8 requires guile-1.6.4-8 better from <a
+LilyPond 1.8 requires guile-1.6.4-8 or newer from <a
 href=ftp://ftp.redhat.com/pub/redhat/linux/rawhide/i386/RedHat/RPMS/>
 Rawhide</a>.
 
