@@ -1,3 +1,7 @@
+2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/index.html: Update.
+
 2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* GNUmakefile (upload): commit automatically on upload.
